implement the table loader

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,17 @@ humantime-serde = "1"
 log = { version = "0.4.29", features = ["kv"] }
 env_logger = "0.11"
 clap = { version = "4.5.54", features = ["derive"] }
+arrow = { version = "57", default-features = false, features = ["ipc"] }
+parquet = { version = "57", default-features = false, features = ["arrow", "async", "object_store"] }
+object_store = { version = "0.12", features = ["fs", "aws"] }
+tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "sync", "macros"] }
+tokio-stream = "0.1"
+async-trait = "0.1"
+chrono = "0.4"
+memmap2 = "0.9"
+bytes = "1"
+
+[dev-dependencies]
+tempfile = "3"
+rand = "0.8"
+rstest = "0.24"
