--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ humantime-serde = "1"
 log = { version = "0.4.29", features = ["kv"] }
 env_logger = "0.11"
 clap = { version = "4.5.54", features = ["derive"] }
-arrow = { version = "57", default-features = false, features = ["ipc"] }
+arrow = { version = "57", default-features = true, features = ["ipc"] }
 parquet = { version = "57", default-features = false, features = ["arrow", "async", "object_store"] }
 object_store = { version = "0.12", features = ["fs", "aws"] }
 tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "sync", "macros"] }
