--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ bytes = "1"
 axum = "0.8"
 tower-http = { version = "0.6", features = ["trace"] }
 serde_json = "1"
+ahash = "0.8"
 tempfile = { version = "3", optional = true }
 rand = { version = "0.8", optional = true }
 
