--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ axum = "0.8"
 tower-http = { version = "0.6", features = ["trace"] }
 serde_json = "1"
 ahash = "0.8"
+bytemuck = { version = "1", features = ["derive"] }
 tempfile = { version = "3", optional = true }
 rand = { version = "0.8", optional = true }
 
