add parquet writing support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ log = { version = "0.4.29", features = ["kv"] }
 env_logger = "0.11"
 clap = { version = "4.5.54", features = ["derive"] }
 arrow = { version = "57", default-features = true, features = ["ipc"] }
+parquet = { version = "57", default-features = false, features = ["arrow"] }
 tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "sync", "macros"] }
 tokio-stream = "0.1"
 async-trait = "0.1"
