--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,16 @@ permissions:
   contents: write
 
 jobs:
+  create-release:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          generate_release_notes: true
+
   release:
+    needs: create-release
     strategy:
       matrix:
         include:
@@ -47,8 +56,7 @@ jobs:
         shell: bash
         run: cp target/release/${{ matrix.binary }} ${{ matrix.artifact }}
 
-      - name: Create GitHub Release
+      - name: Upload release artifact
         uses: softprops/action-gh-release@v2
         with:
-          generate_release_notes: true
           files: ${{ matrix.artifact }}
