--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,21 +10,21 @@ testutil = ["dep:tempfile", "dep:rand"]
 config = "0.15.19"
 serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.18"
-anyhow = "1.0.102"
-humantime-serde = "1"
-
 log = { version = "0.4.29", features = ["kv"] }
 env_logger = "0.11"
 clap = { version = "4.5.60", features = ["derive"] }
 arrow = { version = "58", default-features = true, features = ["ipc"] }
 parquet = { version = "58", default-features = false, features = ["arrow"] }
-tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "sync", "macros"] }
-tokio-stream = "0.1"
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "fs",
+    "time",
+    "sync",
+    "macros",
+] }
 async-trait = "0.1"
 memmap2 = "0.9"
-bytes = "1"
 axum = "0.8"
-tower-http = { version = "0.6", features = ["trace"] }
 serde_json = "1"
 serde_yaml_ng = "0.10"
 ahash = "0.8"
@@ -37,10 +37,6 @@ rand = { version = "0.10", optional = true }
 murr = { path = ".", features = ["testutil"] }
 criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
 rand = "0.10"
-bitvec = "1"
-ahash = "0.8"
-rayon = "1"
-rstest = "0.26"
 http-body-util = "0.1"
 tower = { version = "0.5", features = ["util"] }
 redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
