--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,22 @@ env_logger = "0.11"
 clap = { version = "4.5.60", features = ["derive"] }
 arrow = { version = "58", default-features = true, features = ["ipc"] }
 parquet = { version = "58", default-features = false, features = ["arrow"] }
-tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "sync", "macros"] }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "fs",
+    "time",
+    "sync",
+    "macros",
+] }
 tokio-stream = "0.1"
 async-trait = "0.1"
 memmap2 = "0.9"
 bytes = "1"
 axum = "0.8"
 tower-http = { version = "0.6", features = ["trace"] }
+arrow-flight = "58"
+tonic = "0.14"
+futures = "0.3"
 serde_json = "1"
 serde_yaml_ng = "0.10"
 ahash = "0.8"
