--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,36 @@ jobs:
 
       - name: Run tests
         run: cargo test
+
+  python-test:
+    strategy:
+      matrix:
+        python-version: ["3.13", "3.14"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Cache cargo registry and build
+        uses: Swatinem/rust-cache@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
+      - name: Build and install murr
+        run: |
+          uv pip install --system maturin
+          maturin develop -m python/Cargo.toml
+
+      - name: Install test dependencies
+        run: uv pip install --system pytest pyarrow pydantic
+
+      - name: Run Python tests
+        run: pytest python/tests/ -v
