--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,11 +63,24 @@ jobs:
 
   python-wheel:
     needs: create-release
-    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-22.04
+          - os: macos-14
+    runs-on: ${{ matrix.os }}
+    env:
+      MACOSX_DEPLOYMENT_TARGET: "11.0"
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build manylinux wheels
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Cache cargo registry and build
+        uses: Swatinem/rust-cache@v2
+
+      - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           command: build
