Sync versions between cargo, uv and git on release.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [workspace]
 members = ["python"]
 
+[workspace.package]
+version = "0.1.0"
+
 [package]
 name = "murr"
-version = "0.1.0"
+version.workspace = true
 edition = "2024"
 
 [features]
