--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "murr"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Columnar in-memory cache for AI/ML inference workloads"
 license = "Apache-2.0"
 requires-python = ">=3.11"
